Spacing and font fixes
Fixes #177
Fixes # 176
Fixes #157

--- a/site/static/less/base.less
+++ b/site/static/less/base.less
@@ -16,7 +16,7 @@ section {
 
 hr {
   border-bottom: 1px solid @gray2;
-  margin: 0px;
+  margin: 35px 0 14px 0;
 }
 
 p {
